--- a/components/Ayah.css
+++ b/components/Ayah.css
@@ -123,7 +123,10 @@ svg{
     .container{
         min-width: 70vw;
     }
-
-    
-
+    .Result{
+        min-width: 50vw;
+    }
+    .Result p{
+        min-width: 30vw;
+    }
   }
