--- a/components/Ayah.css
+++ b/components/Ayah.css
@@ -124,9 +124,9 @@ svg{
         min-width: 70vw;
     }
     .Result{
-        min-width: 50vw;
+        max-width: 50vw;
     }
     .Result p{
-        min-width: 30vw;
+        min-width: 40vw;
     }
   }
