--- a/components/Ayah.css
+++ b/components/Ayah.css
@@ -120,7 +120,7 @@ svg{
         justify-content: center;
         align-items: center;
     }
-    .container1 .card{
+    .container1 {
         max-width: fit-content;
         }
     .container .content{
