--- a/components/Ayah.css
+++ b/components/Ayah.css
@@ -121,7 +121,7 @@ svg{
         align-items: center;
     }
     .container1 {
-        min-width: fit-content;
+        min-width: 80vw;
         }
     .container .content{
        max-width: fit-content;
